<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:cardCornerRadius="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageProduct"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/tomkubasik" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textNameProduct"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/articleExempleTitle"
        android:layout_marginLeft="@dimen/item_margin"
        android:layout_marginTop="@dimen/item_margin"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/textPriceProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/articleExemplePrice"
        app:layout_constraintStart_toStartOf="@+id/textNameProduct"
        app:layout_constraintTop_toBottomOf="@+id/textNameProduct"
        style="@style/PriceTextStyle"
        android:textSize="18sp"
        android:textColor="@color/orange"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/buttonBuy"
        android:layout_width="125dp"
        android:layout_height="34dp"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/textPriceProduct"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/textPriceProduct">

        <TextView
            android:id="@+id/textBuy"
            style="@style/PriceTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buy"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textDeliveryFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliveryFee"
        style="@style/DefaultTextStyle"
        android:textSize="12sp"
        android:textColor="@color/Secondary"
        app:layout_constraintEnd_toEndOf="@+id/buttonBuy"
        app:layout_constraintStart_toStartOf="@+id/buttonBuy"
        app:layout_constraintTop_toBottomOf="@+id/buttonBuy" />

    <TextView
        android:id="@+id/textDescProduct"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/articleExempleDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDeliveryFee" />
</androidx.constraintlayout.widget.ConstraintLayout>