<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:layout_marginTop="@dimen/item_margin">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageItem"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/tomkubasik" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textNameProduct"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/articleExempleTitle"
        android:layout_marginLeft="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@+id/textPriceProduct"
        app:layout_constraintStart_toEndOf="@+id/cardView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPriceProduct"
        style="@style/PriceTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/articleExemplePrice"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/textOrdered"
        app:layout_constraintStart_toStartOf="@+id/textNameProduct"
        app:layout_constraintTop_toBottomOf="@+id/textNameProduct" />

    <TextView
        android:id="@+id/textOrdered"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordered"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textPriceProduct"
        app:layout_constraintTop_toBottomOf="@+id/textPriceProduct" />
</androidx.constraintlayout.widget.ConstraintLayout>